# hmr

./: AGENTS.md  Cargo.toml  LICENSE  PKGBUILD.hmr  PKGBUILD.hmr-bin  README.md  justfile  release.toml  tool.toml
.beads/: issues.jsonl
.github/workflows/: release.yml
examples/: config.toml
history/: PRD.md
logo/: hmr_logo.ai
skill/home-assistant-hmr-cli/: SKILL.md
src/: api.rs  cache.rs  cli.rs  config.rs  fuzzy.rs  history.rs  main.rs  natural_args.rs  nl.rs  output.rs  websocket.rs
src/commands/: agent.rs  area.rs  cache.rs  completions.rs  config.rs  device.rs  do_cmd.rs  entity.rs  event.rs  history.rs  info.rs  mod.rs  service.rs  template.rs
