[package]
name = "hmr"
version = "0.2.0"
edition = "2021"
description = "A slim, fast CLI for Home Assistant"
license = "MIT"
repository = "https://github.com/example/hmr"
keywords = ["home-assistant", "cli", "iot", "automation"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
config = { version = "0.15", features = ["toml"] }
dirs = "5.0"
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "3.1"
serde_yaml = "0.9"
toml = "0.8"
tokio = { version = "1.47", features = ["rt", "macros", "time", "signal", "sync", "io-util", "net"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tabled = "0.17"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
urlencoding = "2.1"
fuzzy-matcher = "0.3"
humantime = "2.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.14"
wiremock = "0.6"

[profile.release]
lto = true
codegen-units = 1
strip = true
